[package]
name = "datafrost"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec =  { version = "1.0.1", default-features = false, features = [ "std" ] }
mutability_marker = { version = "0.1.1", default-features = false }
sync_rw_cell = { version = "0.1.0", default-features = false }
slab = { version = "0.4.9", default-features = false }
task_pool = { version = "0.1.4", default-features = false }
wasm_sync = { version = "0.1.2", default-features = false }